crates/bitnet-engine-core/tests/snapshots/snapshot_tests__backend_info_cpu_rust_json.snap
---
source: crates/bitnet-engine-core/tests/snapshot_tests.rs
expression: json
---
{
  "backend_name": "cpu-rust",
  "kernel_ids": [
    "i2s_cpu_matmul",
    "layernorm_cpu"
  ],
  "backend_summary": "CPU-Rust (AVX2) — 2 kernels"
}
