crates/bitnet-engine-core/tests/snapshots/snapshot_tests__backend_info_default_json.snap
---
source: crates/bitnet-engine-core/tests/snapshot_tests.rs
expression: json
---
{
  "backend_name": "",
  "kernel_ids": [],
  "backend_summary": ""
}
