crates/bitnet-engine-core/tests/snapshots/snapshot_tests__generation_stats_with_values_json.snap
---
source: crates/bitnet-engine-core/tests/snapshot_tests.rs
expression: json
---
{
  "tokens_generated": 64,
  "tokens_per_second": 12.3,
  "total_duration_ms": 0.0,
  "mean_token_latency_ms": 0.0,
  "time_to_first_token_ms": 0.0
}
