crates/bitnet-engine-core/tests/snapshots/snapshot_tests__session_config_default_json.snap
---
source: crates/bitnet-engine-core/tests/snapshot_tests.rs
expression: json
---
{
  "model_path": "",
  "tokenizer_path": "",
  "backend": "cpu",
  "max_context": 2048,
  "seed": null
}
