crates/bitnet-engine-core/tests/snapshots/snapshot_tests__session_metrics_default_json.snap
---
source: crates/bitnet-engine-core/tests/snapshot_tests.rs
expression: json
---
{
  "tokens_per_second": 0.0,
  "time_to_first_token_ms": 0.0,
  "total_tokens": 0
}
